# gogo-delivery

./: LICENSE
db/: gogo.sql  gogo_delivery.sql
db/tables/: addresses.sql  cart.sql  categories.sql  favorites.sql  feedbacks.sql  food.sql  notifications.sql  orders.sql  orders_food.sql  users.sql
server/: .gitignore  Cargo.toml
server/src/: db.rs  lib.rs  main.rs  mutation.rs  query.rs  rest.rs  types.rs
server/src/sql/: delete_user_favorite.sql  insert_category.sql  insert_food.sql  is_in_user_cart.sql  is_user_favorite.sql  select_address_by_id.sql  select_categories.sql  select_food.sql  select_notifications.sql  select_order_items.sql  select_user.sql  select_user_by_id.sql  select_user_cart.sql  update_user_role.sql
server/src/sql/check/: credentials_valid.sql
server/src/sql/delete/: food.sql  user_address.sql
server/src/sql/insert/: user.sql  user_address.sql  user_favorite.sql
server/src/sql/select/: food_in_category.sql  order_feedback.sql  user_addresses.sql  user_orders.sql
src/: db.rs  mutation.rs  query.rs  rest.rs  types.rs
src/sql/delete/: category.sql  untaken_user_order.sql  user_address.sql  user_cart.sql  user_cart_all.sql
src/sql/insert/: feedback.sql  order_food.sql  user_cart.sql  user_notification.sql  user_order.sql
src/sql/select/: category_preview.sql  food_in_user_cart.sql  food_preview.sql  order_food.sql  orders.sql  user_favorite_food.sql  user_favorites.sql  user_order.sql  users.sql
src/sql/update/: taken_order.sql  untaken_order.sql
